Added more icons / tab icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta charset="UTF-8"/>
     <link href="ken-kaneki.css" type="text/css" rel="stylesheet">
+    <link rel="icon" type="/image/jpg" href="images/Logo.jpg">
 	
 	<title>Ken-Kaneki Discord Bot</title>
 
@@ -22,7 +23,9 @@
         <div class="backround"></div>
         <div class="center_text">
             <center>
-			<a href="https://discordapp.com/oauth2/authorize?client_id=378627429129781257&scope=bot&permissions=8"><img src="https://png.icons8.com/discord/color/50/000000	" /></a>
+                <a href="https://discordapp.com/oauth2/authorize?client_id=378627429129781257&scope=bot&permissions=8"><img src="images/Discord.png" /></a>
+                <a href="https://github.com/KenKanekiBot/"><img src="images/Github.png" /></a>
+                <a href="https://paypal.me/ClientMod"><img src="images/PayPal.png" /></a>
                 <h2>Changelog</h2>
                 <br>
                 <h1>0.0.1 Beta</h1>
